# scribbles

cpack-dummy/: CMakeLists.txt  has-dummy.txt  package.sh
dbus-upower-bat-notifier/: battery-notifier.py
docker-nginx-django/: .dockerignore  .gitignore  Dockerfile  README.md  manage.py
docker-nginx-django/container/: nginx.conf
docker-nginx-django/dproj/: settings.py  urls.py  wsgi.py
flask-sqlalchemy/: README.md  run.sh  server.py
flask-sqlalchemy/testapp/: database.py  models.py
go-gcp-api/: .gitignore  README.md  go.mod  main.go
gtk-window-helpers/: pointer-helper.py
gtk-window-test/: .gitignore  Makefile  gtk-test.c
gvariant-to-json/: gvariant-to-json.py
js-decorators/: README.md  index.js
libcatfacts-cpp/: CMakeLists.txt  README.md
libcatfacts-cpp/app/: CMakeLists.txt  main.cpp
libcatfacts-cpp/libcatfacts/: CMakeLists.txt
libcatfacts-cpp/libcatfacts/include/: libcatfacts.h
libcatfacts-cpp/libcatfacts/src/: libcatfacts.cpp
pulse-set-volume/: .gitignore  Makefile  set-volume.c
python-apt-test/: apt-test.py
selenium-sendkeys/: service.py
system-scripts/: set-brightness  vt-ctrl-caps
wayland-window/: .gitignore  CMakeLists.txt  main-egl.c  main.c
wayland-window/shared/: os-compatibility.c  os-compatibility.h
